Fix header buttons on small screen width

--- a/blogr/css/style.scss
+++ b/blogr/css/style.scss
@@ -31,7 +31,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 0 0 0 100px;
-    padding: 0rem 2rem 5rem 2rem;
+    padding: 0rem 1rem 4rem 1rem;
     box-sizing: border-box;
     @media only screen and (min-width: $breakpoint-desktop) {
         height: 45vh;
